--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="/">Anasayfa</a></li>
           <li><a href="hakkimizda.html" class="active">Hakkımızda</a></li>
-          <li><a href="services.html">Hizmetlerim</a></li>
+          <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
           
           
 
@@ -54,9 +54,8 @@
 
   <main class="main">
 
-    <!-- Page Title -->
-    <div class="page-title dark-background d-flex align-items-end justify-content-center" data-aos="fade" style="background-image: url(./assets/img/bannerdeneme.webp); height: 300px; background-size: cover; background-position: center bottom;"></div>
-      <div class="container position-relative">
+        <!-- Page Title -->
+<div class="page-title dark-background d-flex align-items-end justify-content-center" data-aos="fade" style="background-image: url(./assets/img/bannerdeneme.webp); background-size: cover; background-position: center bottom;">      <div class="container position-relative">
         <h1>Hakkımızda</h1>
         <p>Kutlu Mali Müşavirlik, mali danışmanlık alanında uzmanlaşmış bir firmadır. Müşterilerimize en iyi hizmeti sunmak için çalışıyoruz.</p>
         <nav class="breadcrumbs">
