--- a/iletisim.html
+++ b/iletisim.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="/">Anasayfa</a></li>
           <li><a href="hakkimizda.html">Hakkımızda</a></li>
-          <li><a href="services.html">Hizmetlerim</a></li>
+          <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
           
           
 
