--- a/footer.html
+++ b/footer.html
@@ -26,9 +26,9 @@
                 <h5>Hızlı Menü</h5>
                 <ul class="list-unstyled">
                   <li><a href="/">Anasayfa</a></li>
-                  <li><a href="#">Hakkımızda</a></li>
-                  <li><a href="#">Hizmetlerimiz</a></li>
-                  <li><a href="#">İletişim</a></li>
+                  <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                  <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
+                  <li><a href="iletisim.html">İletişim</a></li>
                 </ul>
               </div>
               <div class="col-6 col-md-4">
