--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="/" class="active">Anasayfa</a></li>
           <li><a href="hakkimizda.html">Hakkımızda</a></li>
-          <li><a href="services.html">Hizmetlerim</a></li>                  
+          <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>                  
           <li><a href="iletisim.html">İletişim</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
