--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -4,11 +4,15 @@
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Kutlu Mali Müşavirlik</title>
-<meta name="description" content="">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<meta name="description" content="Kutlu Mali Müşavirlik Hakkımızda: Ankara Sincan merkezli mali müşavirlik firmamız, vergi, muhasebe, SGK, e-dönüşüm ve şirket kuruluşu alanlarında uzman kadrosuyla güvenilir ve şeffaf hizmet sunar. İşletmenizin finansal süreçlerini profesyonelce yönetiyoruz.">
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="./assets/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+<link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -47,7 +51,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted d-none d-sm-block" href="quote.html">Blog</a>
+      <a class="btn-getstarted d-none d-sm-block" href="https://blog.kutlumalimusavirlik.com">Blog</a>
 
     </div>
   </header>
