--- a/hizmetlerimiz.html
+++ b/hizmetlerimiz.html
@@ -4,11 +4,14 @@
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Kutlu Mali Müşavirlik</title>
-<meta name="description" content="">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<meta name="description" content="Kutlu Mali Müşavirlik Ankara’da genel muhasebe, vergi danışmanlığı, SGK işlemleri ve finansal raporlama hizmetleri sunar. KOBİ’ler ve serbest meslekler için güvenilir mali müşavirlik çözümleri.">
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="./assets/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+<link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -44,7 +47,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted d-none d-sm-block" href="quote.html">Blog</a>
+      <a class="btn-getstarted d-none d-sm-block" href="https://blog.kutlumalimusavirlik.com">Blog</a>
 
     </div>
   </header>
@@ -82,7 +85,7 @@
             <p>Ankara’daki KOBİ ve serbest meslekler için tek düzen hesap planına uygun,
               e-Defter/e-Fatura entegrasyonlu muhasebe takibi. Güncel mevzuata uyum ve düzenli
               kayıtlarla finansal sağlığınızı güvenceye alıyoruz.</p>
-            <a href="/hizmetler/genel-muhasebe" class="service-link">
+            <a href="https://kutlumalimusavirlik.com" class="service-link">
               <span>Detayları Gör</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -103,7 +106,7 @@
             <p>Gelir/Kurumlar, KDV, Muhtasar-Prim, Geçici Vergi ve BA/BS süreçleri. Ankara’daki
               işletmeniz için vergi planlaması, istisna/teşvik danışmanlığı ve zamanında beyan ile
               riskleri en aza indiriyoruz.</p>
-            <a href="/hizmetler/vergi-danismanligi" class="service-link">
+            <a href="https://kutlumalimusavirlik.com" class="service-link">
               <span>Detayları Gör</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -124,7 +127,7 @@
             <p>Aylık bordro, e-Bildirge, işe giriş/çıkış, teşvik kodları, kıdem/ihbar hesapları ve
               İSG uyum süreçleri. Ankara’da yasal uyumu korurken çalışan memnuniyetini artıran
               pratik çözümler sunuyoruz.</p>
-            <a href="/hizmetler/bordro-sgk" class="service-link">
+            <a href="https://kutlumalimusavirlik.com" class="service-link">
               <span>Detayları Gör</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -144,7 +147,7 @@
             <h3>Finansal Raporlama &amp; Bilanço Analizi</h3>
             <p>Nakit akışı, bütçe kontrolü, yönetim raporları ve banka/kredi süreçlerine hazırlık.
               Ankara’daki yöneticiler için anlaşılır KPI’larla veriye dayalı karar almayı kolaylaştırıyoruz.</p>
-            <a href="/hizmetler/finansal-raporlama" class="service-link">
+            <a href="https://kutlumalimusavirlik.com" class="service-link">
               <span>Detayları Gör</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -161,7 +164,7 @@
         <div class="cta-section">
           <h4>Ankara’da güvenilir bir mali müşavir mi arıyorsunuz?</h4>
           <p>İhtiyaçlarınıza özel çözümler için bizimle iletişime geçin; ücretsiz ön değerlendirme yapalım.</p>
-          <a href="/iletisim" class="btn-primary">
+          <a href="iletisim.html" class="btn-primary">
             <span>Ücretsiz Ön Görüşme Al</span>
             <i class="bi bi-arrow-right"></i>
           </a>
