--- a/iletisim.html
+++ b/iletisim.html
@@ -4,11 +4,15 @@
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Kutlu Mali Müşavirlik</title>
-<meta name="description" content="">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<meta name="description" content="Kutlu Mali Müşavirlik iletişim sayfası. Ankara'da mali müşavirlik hizmetleri için adres, telefon, e-posta ve çalışma saatlerimizden bize kolayca ulaşabilirsiniz. Profesyonel danışmanlık ve müşavirlik için hemen iletişime geçin.">
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="./assets/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+<link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -47,7 +51,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted d-none d-sm-block" href="quote.html">Blog</a>
+      <a class="btn-getstarted d-none d-sm-block" href="https://blog.kutlumalimusavirlik.com">Blog</a>
 
     </div>
   </header>
@@ -82,7 +86,7 @@
                 <div class="icon-box"><i class="bi bi-geo-alt"></i></div>
                 <div class="contact-text">
                   <h4>Konumumuz</h4>
-                  <p>8721 Broadway Avenue, New York, NY 10023</p>
+                  <p>Atatürk mahallesi ,Vatan caddesi, Çidamoğulları iş merkezi 1/41</p>
                 </div>
               </div>
             </div>
@@ -92,7 +96,7 @@
                 <div class="icon-box"><i class="bi bi-envelope"></i></div>
                 <div class="contact-text">
                   <h4>E-Posta</h4>
-                  <p><a href="mailto:info@yourdomain.com" class="__cf_email__">info@yourdomain.com</a></p>
+                  <p><a href="mailto:iletisim@kutlumalimusavirlik.com" class="__cf_email__">iletisim@kutlumalimusavirlik.com</a></p>
                 </div>
               </div>
             </div>
@@ -102,7 +106,7 @@
                 <div class="icon-box"><i class="bi bi-telephone"></i></div>
                 <div class="contact-text">
                   <h4>Telefon</h4>
-                  <p>+90 552 841 2828</p>
+                  <p>+90 555 458 4638</p>
                 </div>
               </div>
             </div>
@@ -112,7 +116,7 @@
                 <div class="icon-box"><i class="bi bi-clock"></i></div>
                 <div class="contact-text">
                   <h4>Çalışma Saatlerimiz</h4>
-                  <p>Monday–Friday: 9AM – 6PM</p>
+                  <p>Pazartesi-Cuma 09.00-20.00</p>
                 </div>
               </div>
             </div>
@@ -125,9 +129,9 @@
             <div class="map-wrapper">
               <div class="ratio ratio-16x9 rounded-3 overflow-hidden">
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.9701187112455!2d32.57950067572427!3d39.964420783044844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d33a877bc0053d%3A0xc11a92b4c85b49b2!2zw4dpZGFtb8SfdWxsYXJpIMSwxZ8gTWVya2V6aQ!5e0!3m2!1str!2str!4v1756360813693!5m2!1str!2str"
                   class="w-100 h-100" style="border:0;" allowfullscreen loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>                  
               </div>
             </div>
           </div>
