--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Kutlu Mali Müşavirlik</title>
-<meta name="description" content="">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<meta name="description" content="Kutlu Mali Müşavirlik, Ankara Sincan’da işletmeler ve profesyoneller için uzman mali müşavirlik, vergi danışmanlığı, muhasebe, SGK işlemleri, KDV iadesi ve finansal raporlama hizmetleri sunar. Dijital dönüşüm (e-Defter, e-Fatura, e-Arşiv) ve mevzuata tam uyum ile güvenilir, hızlı ve sürdürülebilir mali süreç yönetimi.">
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./assets/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="./assets/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+<link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -43,8 +47,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <a class="btn-getstarted d-none d-sm-block" href="">Blog</a>
+      <a class="btn-getstarted d-none d-sm-block" href="https://blog.kutlumalimusavirlik.com">Blog</a>
 
     </div>
   </header>
@@ -71,8 +74,8 @@
               <p data-aos="fade-up" data-aos-delay="300">Kutlu Mali Müşavirlik, işletmenizin tüm muhasebe, vergi ve finans yönetimi süreçlerinde profesyonel çözümler sunar. Yasal uyumluluk, vergi optimizasyonu ve mali planlama ile işinizi güvenle büyütün.</p>
 
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="400">
-                <a href="quote.htm" class="btn btn-primary">Hizmetler</a>
-                <a href="projects.html" class="btn btn-secondary">İletişime geç</a>
+                <a href="hizmetlerimiz.html" class="btn btn-primary">Hizmetler</a>
+                <a href="iletisim.html" class="btn btn-secondary">İletişime geç</a>
               </div>
 
               <div class="hero-stats" data-aos="fade-up" data-aos-delay="500">
@@ -189,7 +192,7 @@
         </div>
         <h3>Vergi Danışmanlığı</h3>
         <p>Vergi planlaması, teşvik ve istisnalar, matrah kontrolü ve risk analizi ile sürdürülebilir tasarruf sağlayın.</p>
-        <a href="hizmet-detay.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Hizmeti İncele</span>
           <i class="bi bi-arrow-right"></i>
         </a>
@@ -203,7 +206,7 @@
         </div>
         <h3>Muhasebe ve Defter Tutma</h3>
         <p>e-Defter/e-Fatura uyumlu kayıt, aylık beyanname hazırlığı ve dönem sonu kapanış işlemleriyle tam düzen.</p>
-        <a href="hizmet-detay.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Hizmeti İncele</span>
           <i class="bi bi-arrow-right"></i>
         </a>
@@ -218,7 +221,7 @@
         </div>
         <h3>Genel Danışmanlık</h3>
         <p>Stratejik finans, nakit akışı, maliyet kontrolü ve yönetim raporlamasını tek elden koordine eden uçtan uca danışmanlık.</p>
-        <a href="teklif-al.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Teklif Al</span>
           <i class="bi bi-arrow-right"></i>
         </a>
@@ -232,7 +235,7 @@
         </div>
         <h3>Bordro ve SGK İşlemleri</h3>
         <p>Ücret bordroları, teşviklerin takibi, işe giriş/çıkış ve aylık SGK bildirgeleriyle hatasız ve zamanında süreç yönetimi.</p>
-        <a href="hizmet-detay.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Hizmeti İncele</span>
           <i class="bi bi-arrow-right"></i>
         </a>
@@ -246,7 +249,7 @@
         </div>
         <h3>KDV İadesi ve İhracat</h3>
         <p>İade dosyalarının hazırlanması, YMM raporu koordinasyonu ve süreç takibi ile hızlı ve güvenli sonuç alın.</p>
-        <a href="hizmet-detay.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Hizmeti İncele</span>
           <i class="bi bi-arrow-right"></i>
         </a>
@@ -260,7 +263,7 @@
         </div>
         <h3>Finansal Raporlama ve Bütçe</h3>
         <p>Aylık/çeyreklik raporlar, bütçe–projeksiyon ve KPI takibi ile veriye dayalı, hızlı ve sağlıklı kararlar verin.</p>
-        <a href="hizmet-detay.html" class="service-cta">
+        <a href="hizmetlerimiz.html" class="service-cta">
           <span>Hizmeti İncele</span>
           <i class="bi bi-arrow-right"></i>
         </a>
