--- a/footer.html
+++ b/footer.html
@@ -11,10 +11,9 @@
             <p class="tagline">Her zaman, her adımınızda yanınızdayız.</p>
 
             <div class="social-links mt-4">
-              <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/kutlumusavirlik/" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
               <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-              <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
             </div>
           </div>
         </div>
@@ -22,7 +21,7 @@
         <div class="col-lg-6">
           <div class="footer-links-grid">
             <div class="row">
-              <div class="col-6 col-md-4">
+              <div class="col-6 col-md-5">
                 <h5>Hızlı Menü</h5>
                 <ul class="list-unstyled">
                   <li><a href="/">Anasayfa</a></li>
@@ -31,22 +30,13 @@
                   <li><a href="iletisim.html">İletişim</a></li>
                 </ul>
               </div>
-              <div class="col-6 col-md-4">
-                <h5>Services</h5>
+              <div class="col-6 col-md-5">
+                <h5>Hizmetlerimiz</h5>
                 <ul class="list-unstyled">
-                  <li><a href="#">Web Development</a></li>
-                  <li><a href="#">UI/UX Design</a></li>
-                  <li><a href="#">Digital Strategy</a></li>
-                  <li><a href="#">Branding</a></li>
-                </ul>
-              </div>
-              <div class="col-6 col-md-4">
-                <h5>Support</h5>
-                <ul class="list-unstyled">
-                  <li><a href="#">Help Center</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Terms of Service</a></li>
+                  <li><a class="no-mouse">Vergi Danışmanlığı</a></li>
+                  <li><a class="no-mouse">Defter Tutma</a></li>
+                  <li><a class="no-mouse">Finansal Raporlama</a></li>
+                  <li><a class="no-mouse">SGK & Personel İşlemleri</a></li>
                 </ul>
               </div>
             </div>
@@ -55,8 +45,8 @@
 
         <div class="col-lg-2">
           <div class="footer-cta">
-            <h5>Let's Connect</h5>
-            <a href="contact.html" class="btn btn-outline">Get in Touch</a>
+            <h5>İrtibatta Kalalım</h5>
+            <a href="iletisim.html" class="btn btn-outline">İletişime Geç</a>
           </div>
         </div>
 
